# praxis-workshop

./: .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
runbooks/: issue-nucleus.md  issue-refinement-runbook-pkdp-companion.md  issue-refinement-runbook.md  pkdp-runbook.md  research-runbook.md  workshop-integration.md
src/steward/: __init__.py  __main__.py  cli.py
src/steward/application/: __init__.py  init_service.py  intake_service.py  list_service.py  stage_service.py  sync_service.py
src/steward/domain/: __init__.py  errors.py  exit_codes.py  models.py  stages.py
src/steward/infrastructure/: __init__.py  console.py  env.py  filesystem.py  slugify.py  status_yaml.py
templates/: github-issue-feature.md  github-research-issue.md  knowledge-gap-flags-template.md  research-handoff-template.md  status.yaml
tests/: __init__.py  conftest.py
tests/features/: init.feature  intake.feature  list.feature  stage.feature  sync.feature  wrapper.feature
tests/step_defs/: test_init.py  test_intake.py  test_list.py  test_stage.py  test_sync.py  test_wrapper.py
